k8s/apps/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: cloudops
  labels:
    app: backend
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: cloudops-ai-platform
spec:
  ingressClassName: nginx
  rules:
    - host: cloudops.wyhblog.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
